
2018-01-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* codgen.c (output_internal_function): don't clear sticky-linkage pointers
	  when program has CHAINING

2018-01-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_build_identifier): also check for ref-mod length
	  overflow when offset is is a variable
	* typeck.c (cb_build_identifier): only build field name if actual
	  needed, moved code building to new static cb_build_name_reference
	* tree.c (compare_field_literal): added check for comparisions against
	  a reference modified field when the offset or length is known

2018-01-16  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_build_assignment_name): only warn ASSIGN EXTERNAL fname
	  interpretation when fname was changed

2018-01-12  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* config.def: added cb_missing_statement, see FR #288
	* parser.y (if_statement): first change for FR #288 leading to warning
	  message for "IF cond ELSE statements"
	* tree.c (cb_build_reference, cb_ref), parser.y (procedure_name):
	  store position (section/paragraph) for all references not only for labels
	* error.c (cb_verify_x, cb_set_ignore_error): never ignore errors that
	  depend on compiler configuration
	* parser.y (procedure_name), typeck.c (cb_validate_program_body), tree.h:
	  don't raise errors for labels in ignored code parts and skip some
	  verifications on these

2018-01-07  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* codegen.c: moved all code parts for (output_function_entry_function)
	  to this function and adjusted the callers
	* typeck.c, parser.y, tree.h: adjusted (cb_build_program_id) to directly
	  get the external name passed, removing duplicated code

2018-01-03  Edward Hart <edward.dan.hart@gmail.com>

	* typeck.c (cb_build_move_literal): fixed bug #486, where literals moved
	  to an ANY LENGTH item where truncated to one character.