@@ -3,6 +3,7 @@
 
 	* codgen.c (output_internal_function): don't clear sticky-linkage pointers
 	  when program has CHAINING
+	* parser.y: added SAME phrase for screen i/o as PENDING
 
 2018-01-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
